overflow issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ html {
   font-size: 18px;
   scroll-behavior: smooth; }
 
+body {
+  overflow-x: hidden; }
+
 section {
   padding: 3rem; }
 
