--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,6 +9,10 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 section {
     padding: 3rem;
 }
